Training docs/Assignment8/Trial/src/objects/Bill__c.object
<CustomObject>
	<description>This generates the bill</description>
	<fields>
		<fullName>Amount_del__c</fullName>
		<description>It shows the Bill amount</description>
		<inlineHelpText>Bill amount</inlineHelpText>
		<label>Amount</label>
		<precision>18</precision>
		<required>true</required>
		<scale>0</scale>
		<type>Currency</type>
	</fields>
	<fields>
		<fullName>Bill_Date__c</fullName>
		<description>Date on which bill was generated.</description>
		<inlineHelpText>It is the date on which bill is generated.</inlineHelpText>
		<label>Bill Date</label>
		<required>true</required>
		<type>Date</type>
	</fields>
	<fields>
		<fullName>Description__c</fullName>
		<description>Describes the bill information.</description>
		<inlineHelpText>It shows the information of the bill.</inlineHelpText>
		<label>Description</label>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>Status__c</fullName>
		<description>This shows is the payment done or is payed or is denied.</description>
		<inlineHelpText>Payment Status</inlineHelpText>
		<label>Status</label>
		<picklist>
			<picklistValues>
				<fullName>Pending</fullName>
				<default>true</default>
			</picklistValues>
			<picklistValues>
				<fullName>Paid</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Denied</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<label>Bill</label>
	<listViews>
		<fullName>All</fullName>
		<filterScope>Everything</filterScope>
		<label>All</label>
	</listViews>
	<nameField>
		<displayFormat>EMC-{0000}</displayFormat>
		<label>Bill Number</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Bills</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>